failsafe plugin, fixed tests